# aegis-agent-firewall

./: .gitignore  package-lock.json  package.json  railway.toml  red_team_firestorm.py  run-final-audit.js  tsconfig.json
backend/: Dockerfile.sidecar  benchmark.js  docker-compose.yml  envoy.yaml  eslint.config.js  evaluate_chinese_models.js  evaluate_more_models.js  nixpacks.toml  package-lock.json  package.json  package.json-e  playwright.config.js  production-enterprise-suite.js  promptfooconfig.yaml  railway.json  railway.toml  run-consortium.js  run-final-audit.js  run-reasoning-audit.js  semaproof_threats.jsonl  test-bls.js  test-frost.js
backend/coverage/: clover.xml  coverage-final.json  lcov.info
backend/e2e/: production.spec.js
backend/rust-bls-engine/: Cargo.toml
backend/rust-bls-engine/src/: lib.rs
backend/src/: aegisguard.js  auditLogger.js  download-model.mjs  guardian.d.ts  guardian.d.ts.map  guardian.js  guardian.js.map  index.js  index.js.map  opa-gate.js  polyfill.js  semaproof-classifier.js  sidecar.js  test-esm.js  threat-store.js
backend/test/: classify.spec.js  ext-authz.spec.js  guardian.spec.js  index.spec.js  opa.spec.js  (+4 more)
frontend/: package-lock.json  package.json  playwright.config.ts
src/: .agent_catalog.md  .agent_rules.md  index.ts
training-data/: .gitignore  AegisGuard_FineTune.ipynb  acquire_public_datasets.py  aegisguard_train.jsonl  augment.mjs  augment_50k.py  augment_llm_seeds.py  generate_synthetic.py  merge_datasets.py  seeds.mjs  semaproof_llm_generated.jsonl  semaproof_llm_generated_gemini.jsonl  train_distilbert.py
(+62 files in other folders)
