[package]
name = "semaproof-bls-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance BLS12-381 core for SemaProof Firewall"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The industry standard BLS12-381 implementation (Ethereum 2.0 / Ethereum Foundation)
blst = { version = "0.3.13" }
# Hashing for message mapping
sha2 = "0.10.8"
# JS/WASM Bridge
wasm-bindgen = "0.2.92"
# High-speed hex encoding
hex = "0.4.3"
# Efficient serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
